platform/k8s/base/backend-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: orsted-lab

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend-api

  template:
    metadata:
      labels:
        app: backend-api

    spec:
      containers:
      - name: backend-api
        image: orstedlabacr.azurecr.io/backend-api:v1
        ports:
        - containerPort: 8000

      imagePullSecrets:
      - name: acr-secret
