platform/k8s/base/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-gateway
  namespace: orsted-lab

spec:

  replicas: 1

  selector:
    matchLabels:
      app: nginx-gateway

  template:

    metadata:
      labels:
        app: nginx-gateway

    spec:

      containers:

      - name: nginx

        image: nginx:latest

        ports:
        - containerPort: 80

        volumeMounts:

        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf


      volumes:

      - name: nginx-config

        configMap:
          name: nginx-config
