platform/k8s/base/backend-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
  namespace: orsted-lab

spec:
  selector:
    app: backend-api

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
