platform/k8s/base/correlation-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: correlation-service
  namespace: orsted-lab

spec:
  selector:
    app: correlation-api

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
