platform/k8s/base/submission-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: submission-service
  namespace: orsted-lab

spec:
  selector:
    app: submission-api

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
